--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
 # JPA & Hibernate Configuration
-       
+# This setting creates/updates tables automatically    
 # Options: update, create, create-drop, validate, none
 spring.jpa.hibernate.ddl-auto=update    
 # Show SQL queries in console
