Done List a Book feature but with 403 error

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,8 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.web.resources.cache.period=0
 spring.web.resources.chain.cache=false
 spring.thymeleaf.cache=false
+
+spring.profiles.active=dev
+
+# Completely disable Spring Security
+# spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration,org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration
