--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,10 @@ spring.application.name=Bookbuddy
 # Server Configuration
 server.port=8080
 
+# Session Configuration
+server.servlet.session.timeout=30m
+server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.secure=false
 
 # Database Configuration (MySQL)
 # Note: Database uses utf8mb4, but connection string uses UTF-8
@@ -32,6 +36,3 @@ spring.web.resources.chain.cache=false
 spring.thymeleaf.cache=false
 
 spring.profiles.active=dev
-
-# Completely disable Spring Security
-# spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration,org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration
