--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,13 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<!-- H2 Database for testing -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
+		</dependency>
                 
                 <!-- For User entity, added validation annotations(@NotBlank,@Email,@Size)for better data validation -->
                 <dependency>
