--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -9,13 +9,20 @@ server.servlet.session.timeout=30m
 server.servlet.session.cookie.http-only=true
 server.servlet.session.cookie.secure=true
 
-# Database Configuration (Render PostgreSQL)
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+# Database Configuration (Render PostgreSQL) - Override all database settings
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA & Hibernate Configuration
+# Override any MySQL settings from default profile
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=1200000
+
+# JPA & Hibernate Configuration - Override MySQL settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
@@ -24,6 +31,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # Production Settings
 logging.level.org.hibernate.SQL=WARN
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
+logging.level.com.bookbuddy=DEBUG
+logging.level.org.springframework.boot.autoconfigure=DEBUG
+
+# Database connection debugging
+logging.level.org.springframework.jdbc=DEBUG
+logging.level.com.zaxxer.hikari=DEBUG
 
 # Enable caching for production
 spring.web.resources.cache.period=3600
