Modify minor error message handling & delete Thmyleaf setup

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -41,7 +41,6 @@ logging.level.com.zaxxer.hikari=DEBUG
 # Enable caching for production
 spring.web.resources.cache.period=3600
 spring.web.resources.chain.cache=true
-spring.thymeleaf.cache=true
 
-# Security settings for production
-spring.security.require-ssl=true 
+# Security settings for production - disabled for Render compatibility
+# spring.security.require-ssl=true 
